--- a/src/FilePropertyHeader.css
+++ b/src/FilePropertyHeader.css
@@ -8,8 +8,8 @@
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
     width: 100%;
-    padding-left: 10px;
-    padding-right: 10px;
+    /* padding-left: 10px;
+    padding-right: 10px; */
 }
 
 .header-property {
@@ -18,7 +18,6 @@
     text-align: left;
     justify-content: left;
     align-content: center;
-    text-shadow: 0px 0px 5px #000000;
 }
 
 .header-property:hover {
